# docs/api/openapi.yaml
@@ -2812,6 +2812,15 @@ paths:
           - type: 'null'
           title: Screen
       - in: query
+        name: screen_category
+        required: false
+        schema:
+          anyOf:
+          - pattern: ^(oauth|app)$
+            type: string
+          - type: 'null'
+          title: Screen Category
+      - in: query
         name: date_from
         required: false
         schema:
@@ -2894,6 +2903,15 @@ paths:
           minimum: 1
           title: Limit
           type: integer
+      - in: query
+        name: screen_category
+        required: false
+        schema:
+          anyOf:
+          - pattern: ^(oauth|app)$
+            type: string
+          - type: 'null'
+          title: Screen Category
       - in: query
         name: format
         required: false
